--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="exports/chess-arm64_v8a.apk"
+export_path="build/chess-arm64_v8a.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -36,8 +36,8 @@ architectures/x86=false
 architectures/x86_64=false
 version/code=1
 version/name=""
-package/unique_name="com.example.$genname"
-package/name="chess!!!!!!!!!!!!!!!!"
+package/unique_name="org.fluiding.$genname"
+package/name="Denag Chess"
 package/signed=true
 package/app_category=2
 package/retain_data_on_uninstall=false
