--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="build/chess-arm64_v8a.apk"
+export_path="build/chess v7-arm64_v8a.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
